[package]
name = "statussentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["rt-multi-thread", "time", "macros"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

byteorder = "1.5"
reqwest = { version = "0.12.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
